apps/hello-app/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-dev
  labels:
    app.kubernetes.io/part-of: hello-app
