apps/hello-app/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-app
  ports:
    - port: 80
      targetPort: 8080
